Implementation of a neuron with activations ReLu, LeakyReLu, ELu and MSELoss

--- a/lab6/Neuron_activations.ipynb
+++ b/lab6/Neuron_activations.ipynb
@@ -621,7 +621,7 @@
         "id": "_X3lDHElHupo"
       },
       "source": [
-        "Нужно понимать, что ReLU не может вернуть отрицательные числа."
+        "Нужно понимать что ReLU не может вернуть отрицательные числа."
       ]
     },
     {
